# OcctRestService

./: .cproject  .gitignore  .project  CMakeLists.txt  Dockerfile  Dockerfile.alpine  Dockerfile.drogon  Dockerfile.ubuntu  README.md  docker-compose.yml
samples/: Damper_REV8.jt  s201m-b16.stl
src/: Assembly.cpp  CadReader.cpp  CadWriter.cpp  EndpointListing.cpp  EndpointListing.h  Endpoints.cpp  NoFilter.cpp  OcctRestService.cpp  Part.cpp  Part.h  STEPReader.cpp  Structure.cpp
src/httpserver/: basic_auth_fail_response.hpp  create_webserver.hpp  deferred_response.hpp  digest_auth_fail_response.hpp  file_response.hpp  http_endpoint.cpp  http_endpoint.hpp  http_request.hpp  http_resource.hpp  http_response.hpp  http_utils.hpp  httpserver.hpp  modded_request.hpp  string_response.hpp  string_utilities.hpp  webserver.cpp  webserver.hpp
src/include/: Assembly.cpp  Assembly.h  CadReader.cpp  CadReader.h  CadWriter.h  EndpointListing.cpp  EndpointListing.h  Endpoints.h  NoFilter.h  OpenCascade.h  Part.cpp  Part.h  STEPReader.cpp  STEPReader.h  Structure.cpp  Structure.h  aixlog.h  common.h
src/include/occtrestservice/: OcctConvert.h  OcctRestService.h
